assets/css/main.css
---
layout: null
---

html {
    font-size: 100%;
}

body {
    color: {{ site.text-color | default: "#000000"}};
    background-color: {{ site.page-color | default: "#e5e9f0" }};
    font-family: "Open Sans", sans-serif;
}

p {
    margin-bottom: 1.5rem;
}

h1,h2,h3,h4,h5,h6 {
    margin-top: 1.25rem;
    margin-bottom: 2rem;
}

h1 {
    font-size: 2.25rem;
}

h2 {
    font-size: 1.8rem;
}

h3 {
    font-size: 1.6rem;
}

h4 {
    font-size: 1.4rem;
}

a {
    color: {{ site.link-color | default: "#000000" }} !important;
}

.xxl {
    font-size: 10rem;;
    font-weight: bold;
}

.xl {
    font-size: 4rem;
    font-weight: bold;
}

.navbar-custom {
    text-decoration: none !important;
    color: {{ site.accent-txt-color | default: "#e5e9f0" }} !important;
    background-color: {{ site.accent-color | default: "#2e3440" }} !important;
}

img.navbar-custom {
    height: 2.5rem;
}

.navbar-tagline {
    font-style: italic;
    font-size: 0.75rem;
    white-space: nowrap;
}

.dropdown-item:hover {
    color: {{ site.accent-color | default: "#2e3440" }} !important;
    background-color: {{ site.accent-txt-color | default: "#e5e9f0" }} !important;
}

.header-img {
    background: no-repeat center center;
    background-size: cover;
    height: 15rem;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
}

.header-img-txt {
    background: rgba(57, 57, 57, 0.5)
}

.btn {
    color: {{ site.accent-txt-color | default: "#e5e9f0" }} !important;
    background-color: {{ site.accent-color | default: "#2e3440" }} !important;
}

footer {
    color: {{ site.accent-txt-color | default: "#e5e9f0" }} !important;
    background-color: {{ site.accent-color | default: "#2e3440" }} !important;
}

.border {
    border-color: {{ site.accent-color | default: "#2e3440" }} !important;
}

.centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

